# port-libgcrypt

./: .gitignore  AGENTS.md  README.md  all_cves.json  dependents.json  rust-toolchain.toml  test-original.sh  validator-report.md  workflow.yaml
safe/: .gitignore  Cargo.toml  PORT.md  build.rs
safe/cabi/: exports.c  exports.h
safe/debian/: control  debhelper-build-stamp  dumpsexp.8  files  hmac256.1  libgcrypt-config.1  libgcrypt20-dev.install  libgcrypt20-dev.manpages  libgcrypt20.docs  libgcrypt20.install  libgcrypt20.postinst  libgcrypt20.substvars  libgcrypt20.symbols  rules
safe/debian/cargo-home/: .global-cache
safe/docs/: abi-map.md  bridge-inventory.md  cve-matrix.md  test-matrix.md
safe/patches/aes/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
safe/scripts/: build-debs.sh  build-dependent-image.sh  build-release-lib.sh  cargo-target-root.sh  check-abi.sh  check-deb-metadata.sh  check-dependent-metadata.sh  check-installed-tools.sh  check-no-upstream-bridge.sh  check-rust-toolchain.sh  check-validator-package-dev-probe.sh  check-validator-port-evidence.py  import-upstream-tests.sh  prepare-validator-local-port.py  relink-original-objects.sh  run-compat-smoke.sh  run-dependent-image-tests.sh  run-original-tests.sh  run-regression-tests.sh  run-upstream-tests.sh  run-validator-libgcrypt.sh  validator-libgcrypt-skips.json
safe/src/: alloc.rs  config.rs  context.rs  drbg.rs  error.rs  ffi.rs  global.rs  hwfeatures.rs  kdf.rs  lib.rs  log.rs  mac.rs  os_rng.rs  random.rs  secmem.rs  sexp.rs  upstream.rs
safe/src/cipher/: aead.rs  block.rs  local.rs  mod.rs  modes.rs  registry.rs  stream.rs
safe/src/digest/: algorithms.rs  mod.rs
safe/src/mpi/: arith.rs  consts.rs  ec.rs  mod.rs  opaque.rs  prime.rs  scan.rs
safe/src/pubkey/: dsa.rs  ecc.rs  elgamal.rs  encoding.rs  keygrip.rs  mod.rs  rsa.rs
safe/tests/compat/: Makefile.in  abi-only-exports.c  public-api-smoke.c
safe/tests/dependents/: validate-installed-packages.py
safe/tests/original-build/: basic-disable-all-hwf  config.h  hashtest-256g  test-build-vars.mk
safe/tests/regressions/: dependent-image-apt-snapshot-retry.sh  dependent-image-current-phase-tag.sh  gcry-eddsa-testkey-import-seed.sh  gcry-md-asnoid-sha-family.sh  gcry-pk-map-name-ecc-aliases.sh  gcry-rsa-keygrip-leading-zero.sh  gcry-x448-ecdh-raw-result.sh  gpg-curve25519-ecdh-encrypt-ephemeral.sh  gpg-ed25519-eddsa-genkey-sign.sh  gpg-phase5-usage-bucket.sh  gpg-rsa-keyring-md-asnoid.sh  manifest.json
safe/tests/upstream/: Makefile.in  benchmark.c  config.h  curves.c  fips186-dsa.c  (+8 more)
(+134 files in other folders)
