[workspace]
members = ["."]
resolver = "3"

[package]
name = "safe"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "gcrypt"
crate-type = ["staticlib", "rlib"]

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
blake2 = "0.10.6"
blowfish = "0.10.0"
camellia = "0.2.0"
cast5 = "0.12.0"
cipher04 = { package = "cipher", version = "0.4.4" }
cipher05 = { package = "cipher", version = "0.5.1" }
des = "0.9.0"
digest = "0.10.7"
gost94 = "0.10.4"
gost-crypto = "0.3.0"
hmac = "0.12.1"
idea = "0.6.0"
kisaseed = "0.1.3"
md4 = "0.10.2"
md-5 = "0.10.6"
pbkdf2 = { version = "0.12.2", default-features = false }
rc2 = "0.9.0"
ripemd = "0.1.3"
scrypt = { version = "0.11.0", default-features = false }
serpent = "0.6.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
sm3 = "0.4.2"
sm4 = "0.6.0"
streebog = "0.10.2"
tiger = "0.2.1"
twofish = "0.8.0"
whirlpool = "0.10.4"

[profile.release]
panic = "abort"
